rpg-docs/client/views/character/spells/spells.css
#spells .containerMain {
	padding: 0 0 16px 0;
}

#spells .inventoryItem {
	height: 56px;
}

#spells .inventoryItem iron-icon{
	width: 32px;
	height: 32px;
}

#spells .inventoryItem[disabled] {
	color: #ccc !important;
	color: rgba(0,0,0,0.26) !important;
	pointer-events: initial !important;
	cursor: pointer !important;
}

#spells .inventoryItem[disabled] iron-icon{
	color: #ccc !important;
	color: rgba(0,0,0,0.26) !important;
}

#spells .inventoryItem paper-checkbox{
	pointer-events: initial !important;
}

#spells paper-checkbox /deep/ #ink {
	color: #009688;
}

#spells .inventoryItem.spellSlot {
	height: 48px;
}

.slotName {
	margin-right: 16px;
}

.slotBubble {
	pointer-events: initial !important;
}

.slotBubble {
	color: #000;
	color: rgba(0,0,0,0.54);
}

.slotBubble[disabled] {
	color: #cccccc;
	color: rgba(0,0,0,0.26);
}

.spellsContainer{
	padding: 4px;
}

.card.spellList {
	min-width: 280px;
	margin: 4px;
}

.card.spellSlotContainer {
	width: initial;
	margin: 4px;
}

.spellList.card .bottom.list {
	column-width: 300px;
	column-gap: 8px;
	column-fill: balance;
	padding: 16px 4px;
}

.spellList .bottom .paper-font-subhead {
	margin-left: 16px;
}

.spellLevel {
	-webkit-backface-visibility: hidden;
	-webkit-transform: translateX(0);
	-webkit-column-break-inside: avoid;
	page-break-inside: avoid;
	break-inside: avoid;
}

